--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 
 <html>
   <head>
-    YOU DIED!
+    G3SG1
   </head>
   <body>
-    -Respawn-Main Menu-
+    was blown up by Creeper
   </body>
 </html>
