--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 
 <html>
   <head>
-    G3SG1
+    test
   </head>
   <body>
-    was blown up by Creeper
+    <font size="3" color="red">
+      Congratulations, you were blown up by a Creeper!
+    </font>
   </body>
 </html>
