--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <font size="3" color="red">
-      Congratulations, you were blown up by a Creeper!
+      <marquee>Congratulations, you were blown up by a Creeper!</marquee>
     </font>
   </body>
 </html>
